added codepen link and renamed to .html

--- a/index.html
+++ b/index.html
@@ -346,7 +346,9 @@
                         <li><a href="https://github.com/austinpray/"><span class="picto">*</span> Github</a></li>
 
                         <li><a href="http://stackoverflow.com/users/1585343/austin-pray"><span class="picto">&#249;</span> Stack Overflow</a></li>
-
+                        
+                        <li><a href="http://codepen.io/austinpray/"><span class="picto">&#172;</span> Codepen</a></li>
+                        
                         <li><a href="http://jsfiddle.net/user/austinpray/"><span class="picto">!</span> JSFiddle</a></li>
                     </ul>
                 </div>
