fixed page performance, parallax header and iphone issues
master commando
made stuff less specific
gonna redo the site anyway
background is cover, so I don't care about old browsers at all.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta charset="utf-8">
 
     <title>Austin Pray - Web Developer in Dallas, Texas</title>
-    <meta name="description" content="Responsive website enthusiast, javascript developer, fluent in HTML & CSS, I build cutting-edge websites.">
+    <meta name="description" content="Responsive website enthusiast, javascript developer, fluent in HTML &amp; CSS, I build cutting-edge websites.">
     <meta name="author" content="Austin Pray">
     <meta name="apple-mobile-web-app-capable" content="yes"><!-- Mobile Metas
   ================================================== -->
@@ -48,7 +48,7 @@
     ================================================== -->
     <!-- dat semantic markup -->
 
-    <section id="header" class="pLax color-block-section">
+    <section id="header" class="color-block-section">
         <header class="container">
             <img src="http://cdn.austinpray.com/static/img/profile_1.png" width="150" height="150" alt="picture of austin pray in dapper custom suiting">
 
@@ -56,8 +56,6 @@
 
             <h3 id="title">Web Developer</h3>
         </header>
-
-        <div class="parallax" data-velocity="-0.3" data-fit="-300"></div>
     </section>
     <nav id="nav">
         <div class="group">
