fixed details for nerds order
moved details for nerds below visit live site

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             </div>
 
             <div class="row">
-                <section class="deets"><a href="#" class="flat-button" id="details-for-nerds-show">details for nerds</a><a href="http://americansuccessnetwork.com" class="flat-button">visit live site</a></section>
+                <section class="deets"><a href="http://americansuccessnetwork.com" class="flat-button">visit live site</a> <a href="#" class="flat-button" id="details-for-nerds-show">details for nerds</a></section>
             </div>
 
             <div class="row" id="details-for-nerds">
