--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 layout: frontpage
 ---
 
-<div class="jumbotron" itemscope itemtype="http://data-vocabulary.org/Person">
+<div class="jumbotron">
   <div class="jumbotron-content">
-    <h1 class="jumbotron-title" itemprop="name">Austin Pray</h1>
+    <h1 class="jumbotron-title">Austin Pray</h1>
     <p class="jumbotron-byline">
       {{ site.byline }}
     </p>
+    <p class="jumbotron-byline">
     <p class="jumbotron-links">
       <a itemprop="url" href="https://github.com/austinpray" title="@austinpray"><i class="ion-social-octocat"></i></a>
       <a href="mailto:{{ site.email }}" title="austin@austinpray.com"><i class="ion-email"></i></a>
