New page layout

--- a/activity.html
+++ b/activity.html
@@ -1,22 +1,10 @@
 ---
 title: Activity
-layout: frontpage
+layout: page
 scripts:
  - d3
  - lodash
  - activity
 ---
 
-{% include header.html %}
-
-<div class="jumbotron--small">
-  <div class="jumbotron-content">
-    <h1 class="jumbotron-title">What Am I Up To?</h1>
-  </div>
-</div>
-
-<div class="page-content">
-  <div class="wrapper">
-    <div id="graph" class="graph-container"></div>
-  </div>
-</div>
+<div id="graph" class="graph-container"></div>
