--- a/360.html
+++ b/360.html
@@ -3,6 +3,7 @@
 <head>
   <title>siqqqq</title>
   <style>
+    /* lol github streak */
     @-webkit-keyframes rotate {
       from {
         -webkit-transform: rotate(0deg);
