--- a/matt.html
+++ b/matt.html
@@ -18,7 +18,7 @@
   <div id="output"></div>
   <div id="input">
     <form id="inputForm">
-      <input type="text" id="userInput" class="terminalInput" autocomplete="off" autofocus />
+      <input placeholder="do something" type="text" id="userInput" class="terminalInput" autocomplete="off" autofocus />
     </form>
   </div>
 </div>
