JSON + RSS feed

--- a/index.html
+++ b/index.html
@@ -27,5 +27,5 @@ nofooter: true
 </ul>
 
 <p style="text-align: center">
-  <small>subscribe <a href="{{ '/feed.xml' | prepend: site.baseurl }}">via RSS</a></small>
+  <small><a href="{{ '/feed.json' | prepend: site.baseurl }}">JSON</a> / <a href="{{ '/feed.xml' | prepend: site.baseurl }}">RSS</a></small>
 </p>
