--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@ nofooter: true
 <h3>Contact</h3>
 
 <p>
-  <a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
+  <a href="mailto:{{ site.email }}">{{ site.email }}</a>
 </p>
 {% if site.github_username %}
 <p>
-  <a href="https://github.com/{{ site.github_username }}">@{{ site.github_username }} on GitHub</a></li>
+  <a href="https://github.com/{{ site.github_username }}">@{{ site.github_username }} on GitHub</a>
 </p>
 {% endif %}
 {% if site.stackoverflow %}
